removed old Test mains, renamed the others. PolyHedra is now its own thing, without Shaders

--- a/TODO.txt
+++ b/TODO.txt
@@ -21,6 +21,9 @@ there is a way to make the MakeFile check those ?
 
 
 
+FileContext
+Load OBJ
+
 
 
 there are also aparently a lot of things that openGL / glfw has already implemented
